Added background image to index page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <title>Memory Game</title>
 </head>
 <body>
-    <header>
-        <h1>Transportation</h1>
-    </header>
-    
-    <footer>
-    </footer>
+    <div id="background-image">
+        <header>
+            <h1>Transportation</h1>
+        </header>
+        
+        <footer>
+        </footer>
+    </div>
 </body>
 </html>
