--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
 <body>
     <div id="background-image">
         <header>
-            <h1>Transportation</h1>
+            <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><h1>Transportation Game</h1></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dropdown-mobile" aria-controls="dropdown-mobile" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    </div>
+                    <div class="collapse navbar-collapse" id="dropdown-mobile">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Play</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </header>
         
         <footer>
