--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         </header>
         
         <footer>
+            <ul class="nav-bar bg-dark navbar-dark fixed-bottom" >
+                <li class="list-item-social"><a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a></li>
+                <li class="list-item-social"><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="list-item-social"><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li class="list-item-social"><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            </ul>
         </footer>
     </div>
 </body>
