Added basic styling to navbar and footer

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <div id="background-image">
         <header>
-            <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark" id="nav-top">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><h1>Transportation Game</h1></a>
+                    <a class="navbar-brand" href="#"><h1 id="logo">Transportation Game</h1></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dropdown-mobile" aria-controls="dropdown-mobile" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -54,7 +54,7 @@
         </header>
         
         <footer>
-            <ul class="nav-bar bg-dark navbar-dark fixed-bottom" >
+            <ul class="footer-social nav-bar navbar-dark fixed-bottom" id="nav-footer">
                 <li class="list-item-social"><a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a></li>
                 <li class="list-item-social"><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li class="list-item-social"><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
