Added Cards To Index Page

--- a/index.html
+++ b/index.html
@@ -29,21 +29,24 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#myModal" data-toggle = "modal" data-target="#contact-modal" >Contact</a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html" id="active-home" >Home</a>
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Play</a>
+                            <a class="nav-link" href="play.html">Play</a>
                         </li>
                     </ul>
+                <!-- Modal -->
                     <div class="modal fade" id="contact-modal" tabindex="-1" aria-labelledby="contactformheader" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="contactformheader">Contact Form</h5>
-                            <button type="button" class="btn-close btn-primary" data-bs-dismiss="modal" aria-label="Close">Return</button>
                         </div>
                         <div class="modal-body">
                             <input type="text" placeholder="Name">
                             <input type="email" placeholder="Email Address">
-                            <textarea name="Project Idea or Feedback" id="" cols="30" rows="10"></textarea>
+                            <textarea name="project-idea" placeholder="Project Idea or Feedback" id="" cols="30" rows="10"></textarea>
                             <button type="button" class="btn btn-primary">Send</button>
                         </div>
                         </div>
@@ -52,6 +55,42 @@
                 </div>
             </nav>
         </header>
+        <div class="card col-8 offset-2" id="howToPlay">
+        <div class="card-body">
+            <div class="card-title">
+                <h2>How to Play</h2>
+            </div>
+            <div class="card-text">
+                <p>Press play to start playing</p>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, 
+                and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum 
+                et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of 
+                Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" 
+                by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+            </div>
+        </div>
+    </div>
+    <div class="card col-8 offset-2" id="info">
+        <div class="card-body">
+            <div class="card-title">
+                <h2>Info</h2>
+            </div>
+            <div class="card-text">
+                <p>Press play to start playing</p>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, 
+                and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum 
+                et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of 
+                Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" 
+                by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+            </div>
+        </div>
+    </div>
         
         <footer>
             <ul class="footer-social nav-bar navbar-dark fixed-bottom" id="nav-footer">
