--- a/play.html
+++ b/play.html
@@ -32,13 +32,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="play.html" id="active-play">Play</a>
+                        </li>
                     </ul>
                     <div class="modal fade" id="contact-modal" tabindex="-1" aria-labelledby="contactformheader" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="contactformheader">Contact Form</h5>
-                            <button type="button" class="btn-close btn-warning" data-bs-dismiss="modal" aria-label="Close">Return</button>
                         </div>
                         <div class="modal-body">
                             <input type="text" placeholder="Name">
