--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="HTML, CSS, JavaScript, memory, game, jquery, web developer" />
         <meta name="author" content="Darren Daly Carolan" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -24,7 +24,7 @@
                     </button>
                     </div>
                     <div class="collapse navbar-collapse" id="dropdown-mobile">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav page-nav">
                 <!-- Modal button -->
                         <li class="nav-item">
                             <a class="nav-link" href="#myModal" data-toggle = "modal" data-target="#contact-modal" >Contact</a>
@@ -33,11 +33,11 @@
                             <a class="nav-link" href="index.html" id="active-home" >Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="play.html">Play</a>
+                            <a class="nav-link play-btn" href="play.html">Play</a>
                         </li>
                     </ul>
                 <!-- Modal -->
-                    <div class="modal fade" id="contact-modal" tabindex="-1" aria-labelledby="contactformheader" aria-hidden="true">
+                    <div class="modal fade modal-form" id="contact-modal" tabindex="-1" aria-labelledby="contactformheader" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                         <div class="modal-header">
@@ -47,7 +47,7 @@
                             <input type="text" placeholder="Name">
                             <input type="email" placeholder="Email Address">
                             <textarea name="project-idea" placeholder="Project Idea or Feedback" id="" cols="30" rows="10"></textarea>
-                            <button type="button" class="btn btn-primary">Send</button>
+                            <button type="button" class="btn modal-send">Send</button>
                         </div>
                         </div>
                     </div>
