Added Game Container and cards no styling

--- a/play.html
+++ b/play.html
@@ -54,8 +54,33 @@
                 </div>
             </nav>
         </header>
-        <div>
-        </div>
+        <section class="game-board-position">
+            <div class="game-container">
+                <div class="container">
+                    <div class="row">
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+                        <div class="playingCard"></div>
+                    </div>
+                </div>                
+            </div>
+        </section>
         
         <footer>
             <ul class="footer-social nav-bar navbar-dark fixed-bottom" id="nav-footer">
