Added Classes to playing cards and added style to playing cards

--- a/play.html
+++ b/play.html
@@ -58,25 +58,25 @@
             <div class="game-container">
                 <div class="container">
                     <div class="row">
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
+                        <div class="playingCard one"></div>
+                        <div class="playingCard one"></div>
+                        <div class="playingCard two"></div>
+                        <div class="playingCard two"></div>
 
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
+                        <div class="playingCard three"></div>
+                        <div class="playingCard three"></div>
+                        <div class="playingCard four"></div>
+                        <div class="playingCard four"></div>
 
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
+                        <div class="playingCard five"></div>
+                        <div class="playingCard five"></div>
+                        <div class="playingCard six"></div>
+                        <div class="playingCard six"></div>
 
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
-                        <div class="playingCard"></div>
+                        <div class="playingCard seven"></div>
+                        <div class="playingCard seven"></div>
+                        <div class="playingCard eight"></div>
+                        <div class="playingCard eight"></div>
                     </div>
                 </div>                
             </div>
