Added Game Info Text and basic style

--- a/play.html
+++ b/play.html
@@ -54,6 +54,12 @@
                 </div>
             </nav>
         </header>
+        <div class="game-info">
+            <h3>Score<span></span></h3>
+            <h4>Time Passed<span></span></h4>
+            <h4>Cards Flipped<span></span></h4>
+            <h4><button class="btn btn-md">restart</button></h4>
+        </div>
         <section class="game-board-position">
             <div class="game-container">
                 <div class="container">
