Added a card check funtion to check for matching cards

--- a/play.html
+++ b/play.html
@@ -62,25 +62,25 @@
             <div class="game-container">
                 <div class="container">
                     <div class="row">
-                        <div class="playingCard one"></div>
-                        <div class="playingCard one"></div>
-                        <div class="playingCard two"></div>
-                        <div class="playingCard two"></div>
+                        <div class="playingCard one" data-type="bus"></div>
+                        <div class="playingCard one" data-type="bus"></div>
+                        <div class="playingCard two" data-type="car"></div>
+                        <div class="playingCard two" data-type="car"></div>
 
-                        <div class="playingCard three"></div>
-                        <div class="playingCard three"></div>
-                        <div class="playingCard four"></div>
-                        <div class="playingCard four"></div>
+                        <div class="playingCard three" data-type="helicopter"></div>
+                        <div class="playingCard three" data-type="helicopter"></div>
+                        <div class="playingCard four" data-type="plane"></div>
+                        <div class="playingCard four" data-type="plane"></div>
 
-                        <div class="playingCard five"></div>
-                        <div class="playingCard five"></div>
-                        <div class="playingCard six"></div>
-                        <div class="playingCard six"></div>
+                        <div class="playingCard five" data-type="scooter"></div>
+                        <div class="playingCard five" data-type="scooter"></div>
+                        <div class="playingCard six" data-type="boat"></div>
+                        <div class="playingCard six" data-type="boat"></div>
 
-                        <div class="playingCard seven"></div>
-                        <div class="playingCard seven"></div>
-                        <div class="playingCard eight"></div>
-                        <div class="playingCard eight"></div>
+                        <div class="playingCard seven" data-type="train"></div>
+                        <div class="playingCard seven" data-type="train"></div>
+                        <div class="playingCard eight" data-type="airBalloon"></div>
+                        <div class="playingCard eight" data-type="airBalloon"></div>
                     </div>
                 </div>                
             </div>
