Added funtion to count and display number of flipped cards

--- a/play.html
+++ b/play.html
@@ -55,7 +55,7 @@
         <div class="game-info">
             <h3>Score<span></span></h3>
             <h4>Time Passed<span></span></h4>
-            <h4>Cards Flipped<span></span></h4>
+            <h4>Cards Flipped <span id="moveUsed"></span></h4>
             <h4><button class="btn btn-md">Restart</button></h4>
         </div>
         <section class="game-board-position">
