Added a timer to keep track of time since started

--- a/play.html
+++ b/play.html
@@ -54,7 +54,7 @@
         </header>
         <div class="game-info">
             <h3>Score<span></span></h3>
-            <h4>Time Passed<span></span></h4>
+            <h4>Time Passed <span id="timeCounter"></span> sec</h4>
             <h4>Cards Flipped <span id="moveUsed"></span></h4>
             <h4><button class="btn btn-md">Restart</button></h4>
         </div>
