Added A score function which displays when the game is finished

--- a/play.html
+++ b/play.html
@@ -53,7 +53,7 @@
             </nav>
         </header>
         <div class="game-info">
-            <h3>Score<span></span></h3>
+            <h3><span id="scoredisplay"></span></h3>
             <h4>Time Passed <span id="timeCounter"></span> sec</h4>
             <h4>Cards Flipped <span id="moveUsed"></span></h4>
             <h4><button class="btn btn-md">Restart</button></h4>
