Added a reset button incase the player wants to restart the game

--- a/play.html
+++ b/play.html
@@ -56,7 +56,7 @@
             <h3><span id="scoredisplay"></span></h3>
             <h4>Time Passed <span id="timeCounter"></span> sec</h4>
             <h4>Cards Flipped <span id="moveUsed"></span></h4>
-            <h4><button class="btn btn-md">Restart</button></h4>
+            <h4><button class="btn btn-md" id="reset">Restart</button></h4>
         </div>
         <section class="game-board-position">
             <div class="game-container">
