--- a/play.html
+++ b/play.html
@@ -54,8 +54,8 @@
         </header>
         <div class="game-info">
             <h3><span id="scoredisplay"></span></h3>
-            <h4>Time Passed <span id="timeCounter"></span> sec</h4>
-            <h4>Cards Flipped <span id="moveUsed"></span></h4>
+            <h4>Time Passed <span id="timeCounter">0</span> sec</h4>
+            <h4>Cards Flipped <span id="moveUsed">0</span></h4>
             <h4><button class="btn btn-md" id="reset">Restart</button></h4>
         </div>
         <section class="game-board-position">
