Fixed dropdown button on navbar for mobile

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <nav class="navbar navbar-expand-lg navbar-dark" id="nav-top">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"><h1 id="logo">Transportation Game</h1></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dropdown-mobile" aria-controls="dropdown-mobile" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dropdown-mobile" aria-controls="dropdown-mobile" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
                     </button>
                     </div>
                     <div class="collapse navbar-collapse" id="dropdown-mobile">
@@ -46,7 +46,7 @@
                         <div class="modal-body">
                             <input type="text" placeholder="Name">
                             <input type="email" placeholder="Email Address">
-                            <textarea name="project-idea" placeholder="Project Idea or Feedback" id="" cols="30" rows="10"></textarea>
+                            <textarea name="project-idea" placeholder="Project Idea or Feedback" cols="30" rows="10"></textarea>
                             <button type="button" class="btn modal-send">Send</button>
                         </div>
                         </div>
