--- a/play.html
+++ b/play.html
@@ -9,6 +9,12 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
         <link rel="stylesheet" href="assets/css/style.css" />
+        <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+        <script type="text/javascript">
+            (function(){
+                emailjs.init("user_yyBWucBK5MoKcNuX4njDv");
+            })();
+        </script>
     <title>Memory Game</title>
 </head>
 <body>
@@ -42,10 +48,12 @@
                                     <h5 class="modal-title" id="contactformheader">Contact Form</h5>
                                 </div>
                                 <div class="modal-body">
-                                    <input type="text" placeholder="Name">
-                                    <input type="email" placeholder="Email Address">
-                                    <textarea name="project-idea" placeholder="Project Idea or Feedback" cols="60" rows="6"></textarea>
-                                    <button type="button" class="btn modal-send" > Send </button>
+                                    <form onsubmit="return sendMail(this);">
+                                    <input type="text" name="name" id="fullname" placeholder="Name" required>
+                                    <input type="email" name="emailaddress" id="email" placeholder="Email Address" required>
+                                    <textarea name="projectidea" id="feedback" placeholder="Project Idea or Feedback" cols="35" rows="5" required></textarea>
+                                    <button type="submit" class="btn modal-send">Send</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -100,5 +108,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/email.js"></script>
 </body>
 </html>
