--- a/index.html
+++ b/index.html
@@ -1,99 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
-        <meta name="description" content="This is a memory game which consists of matching card pairs" />
-        <meta name="keywords" content="HTML, CSS, JavaScript, memory, game, jquery, web developer" />
-        <meta name="author" content="Darren Daly Carolan" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-        <link rel="stylesheet" href="assets/css/style.css" />
-        <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
-        <script type="text/javascript">
-            (function(){
-                emailjs.init("user_yyBWucBK5MoKcNuX4njDv");
-            })();
-        </script>
+    <meta name="description" content="This is a memory game which consists of matching card pairs" />
+    <meta name="keywords" content="HTML, CSS, JavaScript, memory, game, jquery, web developer" />
+    <meta name="author" content="Darren Daly Carolan" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_yyBWucBK5MoKcNuX4njDv");
+        })();
+    </script>
     <title>Memory Game</title>
 </head>
+
 <body>
     <div id="background-image">
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark" id="nav-top">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><h1 id="logo">Transportation Game</h1></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dropdown-mobile" aria-controls="dropdown-mobile" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="navbar-brand" href="#">
+                        <h1 id="logo">Transportation Game</h1>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dropdown-mobile"
+                        aria-controls="dropdown-mobile" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    </div>
-                    <div class="collapse navbar-collapse" id="dropdown-mobile">
+                </div>
+                <div class="collapse navbar-collapse" id="dropdown-mobile">
                     <ul class="navbar-nav page-nav">
-                <!-- Modal button -->
+                        <!-- Modal button -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#myModal" data-toggle = "modal" data-target="#contact-modal" >Contact</a>
+                            <a class="nav-link" href="#myModal" data-toggle="modal"
+                                data-target="#contact-modal">Contact</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html" id="active-home" >Home</a>
+                            <a class="nav-link" href="index.html" id="active-home">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link play-btn" href="play.html">Play</a>
                         </li>
                     </ul>
-                <!-- Modal -->
-                    <div class="modal fade modal-form" id="contact-modal" tabindex="-1" aria-labelledby="contactformheader" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="contactformheader">Contact Form</h5>
-                        </div>
-                            <div class="modal-body">
-                                <form onsubmit="return sendMail(this);">
-                                <input type="text" name="name" id="fullname" placeholder="Name" required>
-                                <input type="email" name="emailaddress" id="email" placeholder="Email Address" required>
-                                <textarea name="projectidea" id="feedback" placeholder="Project Idea or Feedback" cols="35" rows="5" required></textarea>
-                                <button type="submit" class="btn modal-send">Send</button>
-                                </form>
+                    <!-- Modal -->
+                    <div class="modal fade modal-form" id="contact-modal" tabindex="-1"
+                        aria-labelledby="contactformheader" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="contactformheader">Contact Form</h5>
+                                </div>
+                                <div class="modal-body">
+                                    <form onsubmit="return sendMail(this);">
+                                        <input type="text" name="name" id="fullname" placeholder="Name" required>
+                                        <input type="email" name="emailaddress" id="email" placeholder="Email Address"
+                                            required>
+                                        <textarea name="projectidea" id="feedback"
+                                            placeholder="Project Idea or Feedback" cols="35" rows="5"
+                                            required></textarea>
+                                        <button type="submit" class="btn modal-send">Send</button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </nav>
         </header>
         <div class="card col-8 offset-2" id="howToPlay">
-        <div class="card-body">
-            <div class="card-title">
-                <h2>How to Play</h2>
-            </div>
-            <div class="card-text">
-                <h5>Press the play tab in the nav bar to start playing</h5>
-                <p>
-                    When first starting to play the transport memory game take your time the score which will display after all cards have been matched
-                    is not taking into account time you spent so make sure to take note of where the images are as the less moves you take the higher score
-                    you can get as moves are taken into account when playing.
-                    <br>
-                    <br>
-                    The playing cards give visual feedback when a card is flipped it it wll get a blue outline around the edge to show which image you have flipped
-                    so you dont forget which one you picked. When you select two cards the game will check if they match and if they do then you will get a green outline and if
-                    they are not a match you will get a red outline until they are reset.
-                </p>
-                <h4>If you expierence any issues with the game or notice any bugs please feel free to contact me through the contact tab</h4>
+            <div class="card-body">
+                <div class="card-title">
+                    <h2>How to Play</h2>
+                </div>
+                <div class="card-text">
+                    <h5>Press the play tab in the nav bar to start playing</h5>
+                    <p>
+                        When first starting to play the transport memory game take your time the score which will
+                        display after all cards have been matched
+                        is not taking into account time you spent so make sure to take note of where the images are as
+                        the less moves you take the higher score
+                        you can get as moves are taken into account when playing.
+                        <br>
+                        <br>
+                        The playing cards give visual feedback when a card is flipped it it wll get a blue outline
+                        around the edge to show which image you have flipped
+                        so you dont forget which one you picked. When you select two cards the game will check if they
+                        match and if they do then you will get a green outline and if
+                        they are not a match you will get a red outline until they are reset.
+                    </p>
+                    <h4>If you expierence any issues with the game or notice any bugs please feel free to contact me
+                        through the contact tab</h4>
+                </div>
             </div>
         </div>
-    </div>
-        
+
         <footer>
             <ul class="footer-social nav-bar navbar-dark fixed-bottom" id="nav-footer">
-                <li class="list-item-social"><a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a></li>
-                <li class="list-item-social"><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                <li class="list-item-social"><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                <li class="list-item-social"><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li class="list-item-social"><a href="https://github.com/" target="_blank"><i
+                            class="fab fa-github"></i></a></li>
+                <li class="list-item-social"><a href="https://www.instagram.com/" target="_blank"><i
+                            class="fab fa-instagram"></i></a></li>
+                <li class="list-item-social"><a href="https://www.linkedin.com" target="_blank"><i
+                            class="fab fa-linkedin"></i></a></li>
+                <li class="list-item-social"><a href="https://www.facebook.com/" target="_blank"><i
+                            class="fab fa-facebook"></i></a></li>
             </ul>
         </footer>
         <script src="assets/js/email.js"></script>
     </div>
 </body>
+
 </html>
