--- a/play.html
+++ b/play.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
-        <meta name="description" content="This is a memory game which consists of matching card pairs as quick as possible while trying to use as little moves as possible" />
-        <meta name="keywords" content="HTML, CSS, JavaScript, memory, game, jquery, web developer" />
-        <meta name="author" content="Darren Daly Carolan" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-        <link rel="stylesheet" href="assets/css/style.css" />
-        <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
-        <script type="text/javascript">
-            (function(){
-                emailjs.init("user_yyBWucBK5MoKcNuX4njDv");
-            })();
-        </script>
+    <meta name="description"
+        content="This is a memory game which consists of matching card pairs as quick as possible while trying to use as little moves as possible" />
+    <meta name="keywords" content="HTML, CSS, JavaScript, memory, game, jquery, web developer" />
+    <meta name="author" content="Darren Daly Carolan" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_yyBWucBK5MoKcNuX4njDv");
+        })();
+    </script>
     <title>Memory Game</title>
 </head>
+
 <body>
     <div id="background-image">
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark" id="nav-top">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html"><h1 id="logo">Transportation Game</h1></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-dropdown" aria-controls="mobile-dropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="navbar-brand" href="index.html">
+                        <h1 id="logo">Transportation Game</h1>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-dropdown"
+                        aria-controls="mobile-dropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
                 <div class="collapse navbar-collapse" id="mobile-dropdown">
                     <ul class="navbar-nav page-nav">
-                <!-- Modal button -->
+                        <!-- Modal button -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#myModal" data-toggle = "modal" data-target="#contact-modal" >Contact</a>
+                            <a class="nav-link" href="#myModal" data-toggle="modal"
+                                data-target="#contact-modal">Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
@@ -40,8 +49,9 @@
                             <a class="nav-link play-btn" href="play.html" id="active-play">Play</a>
                         </li>
                     </ul>
-                <!-- Modal display -->
-                    <div class="modal fade modal-form" id="contact-modal" tabindex="-1" aria-labelledby="contactformheader" aria-hidden="true">
+                    <!-- Modal display -->
+                    <div class="modal fade modal-form" id="contact-modal" tabindex="-1"
+                        aria-labelledby="contactformheader" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -49,10 +59,13 @@
                                 </div>
                                 <div class="modal-body">
                                     <form onsubmit="return sendMail(this);">
-                                    <input type="text" name="name" id="fullname" placeholder="Name" required>
-                                    <input type="email" name="emailaddress" id="email" placeholder="Email Address" required>
-                                    <textarea name="projectidea" id="feedback" placeholder="Project Idea or Feedback" cols="35" rows="5" required></textarea>
-                                    <button type="submit" class="btn modal-send">Send</button>
+                                        <input type="text" name="name" id="fullname" placeholder="Name" required>
+                                        <input type="email" name="emailaddress" id="email" placeholder="Email Address"
+                                            required>
+                                        <textarea name="projectidea" id="feedback"
+                                            placeholder="Project Idea or Feedback" cols="35" rows="5"
+                                            required></textarea>
+                                        <button type="submit" class="btn modal-send">Send</button>
                                     </form>
                                 </div>
                             </div>
@@ -91,23 +104,31 @@
                         <div class="playingCard eight" data-type="airBalloon"></div>
                         <div class="playingCard eight" data-type="airBalloon"></div>
                     </div>
-                </div>                
+                </div>
             </div>
         </section>
-        
+
         <footer>
             <ul class="footer-social nav-bar navbar-dark fixed-bottom" id="nav-footer">
-                <li class="list-item-social"><a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a></li>
-                <li class="list-item-social"><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                <li class="list-item-social"><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                <li class="list-item-social"><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li class="list-item-social"><a href="https://github.com/" target="_blank"><i
+                            class="fab fa-github"></i></a></li>
+                <li class="list-item-social"><a href="https://www.instagram.com/" target="_blank"><i
+                            class="fab fa-instagram"></i></a></li>
+                <li class="list-item-social"><a href="https://www.linkedin.com" target="_blank"><i
+                            class="fab fa-linkedin"></i></a></li>
+                <li class="list-item-social"><a href="https://www.facebook.com/" target="_blank"><i
+                            class="fab fa-facebook"></i></a></li>
             </ul>
         </footer>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/email.js"></script>
 </body>
+
 </html>
